--- a/job_costing/index.css
+++ b/job_costing/index.css
@@ -66,7 +66,7 @@ html {
 .bottom {
     width: 100%;
     height: 100%;
-    /*overflow: hidden;*/
+    overflow: hidden;
 }
 
 .bottom .left {
@@ -80,7 +80,7 @@ html {
     /*width: 50%;*/
     /*height: 570px;*/
     float: left;
-    margin-top: -100px;
+    margin-top: -50px;
 }
 
 /*.right > table {*/
