--- a/job_costing/index.css
+++ b/job_costing/index.css
@@ -35,16 +35,16 @@ html {
     width: 75%;
 }
 
-/*.box .top .right {
+.box .top .right {
     width: 50%;
     text-align: center;
     line-height: 40px;
     float: left;
-}*/
+}
 
 .cardBox {
   min-width: 500px;
-  min-height: 680px;
+  min-height: 380px;
 }
 .cardBox > li {
     margin-top: 20px;
@@ -80,7 +80,7 @@ html {
     /*width: 50%;*/
     /*height: 570px;*/
     float: left;
-    /*margin-top: -80px;*/
+    margin-top: -80px;
 }
 
 /*.right > table {*/
